kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mailer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mailer
  template:
    metadata:
      labels:
        app: mailer
    spec:
      containers:
        - name: mailer
          image: 1t1scool/mailer:latest
          ports:
            - containerPort: 4000
