kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mailer-service
spec:
  selector:
    app: mailer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4000
